--- a/assets/css/font-awesome-4.7.0/css/menu.css
+++ b/assets/css/font-awesome-4.7.0/css/menu.css
@@ -1,8 +1,8 @@
 
 
-@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+/* @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300); */
 
 .logo{
     max-width: 100px;
@@ -58,7 +58,7 @@ font-size:20px;
 }
 
 .main-menu, .sidebar {
-background:#f1f1f1;
+background-image: linear-gradient( #83b48a80 1%, white 80%);
 padding-top: 20px;
 top:0;
 bottom:0;
@@ -67,21 +67,20 @@ left:0;
 width:250px;
 position: fixed;
 overflow:hidden;
+/* box-shadow: 0px 0px 7px 1px rgba(185, 183, 183, 0.55); */
 }
 
 
 .main-menu>ul {
 margin:7px 0;
-
+border: none;
 }
 
 .main-menu li {
 position:relative;
 display:block;
 width:250px;
-  
-
-
+border: none;
 }
 
 .main-menu li>a {
@@ -90,7 +89,7 @@ width:255px;
 display:table;
 border-collapse:collapse;
 border-spacing:0;
-color:#8a8a8a;
+color:#070707;
 font-size: 13px;
 text-decoration:none;
 -webkit-transform:translateZ(0) scale(1,1);
@@ -99,38 +98,18 @@ transition:all .14s linear;
 font-family: 'Strait', sans-serif;
 border-top:1px solid #f2f2f2;
 text-shadow: 1px 1px 1px  #fff;  
+border: none;
 }
 
-
-
-.main-menu .nav-icon {
-  
-position:relative;
-display:table-cell;
-width:55px;
-height:36px;
-text-align:center;
-vertical-align:middle;
-font-size:18px;
-
-}
 
 .main-menu .nav-text  {
-   
 position:relative;
 display:table-cell;
 vertical-align:middle;
 width:190px;
-font-family: 'Titillium Web', sans-serif;
+border: none;
 }
 
-
-.main-menu .fb-like {
-
-left: 180px;
-position:absolute;
-top: 15px;
-}
 
 .main-menu>ul.logout {
 position:absolute;
@@ -154,38 +133,27 @@ nav ul,nav li {
 outline:0;
 margin:0;
 padding:0;
-text-transform: uppercase;
+text-transform: capitalize;
 }
-
-
-
 
 /* Darker element side menu Start*/
 
 
 .darkerli
 {
-background-color:#ededed;
 text-transform:capitalize;  
+
 }
 
 .darkerlishadow
 {
-background-color:#ededed;
 text-transform:capitalize;  
--webkit-box-shadow: inset 0px 5px 5px -4px rgba(50, 50, 50, 0.55);
--moz-box-shadow:    inset 0px 5px 5px -4px rgba(50, 50, 50, 0.55);
-box-shadow:         inset 0px 5px 5px -4px rgba(50, 50, 50, 0.55);
 }
 
 
 .darkerlishadowdown
 {
-background-color:#ededed;
 text-transform:capitalize;  
--webkit-box-shadow: inset 0px -4px 5px -4px rgba(50, 50, 50, 0.55);
--moz-box-shadow:    inset 0px -4px 5px -4px rgba(50, 50, 50, 0.55);
-box-shadow:         inset 0px -4px 5px -4px rgba(50, 50, 50, 0.55);
 }
 
 /* Darker element side menu End*/
@@ -194,8 +162,8 @@ box-shadow:         inset 0px -4px 5px -4px rgba(50, 50, 50, 0.55);
 
 
 .main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-color:#fff;
-background-color:#799e7d;
+color:#1b1b1b;
+background-color:#83b48a;
 text-shadow: 0px 0px 0px; 
 }
 .area {
@@ -203,10 +171,4 @@ float: left;
 background: #e2e2e2;
 width: 100%;
 height: 100%;
-}
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
 }
