--- a/assets/css/font-awesome-4.7.0/css/style.css
+++ b/assets/css/font-awesome-4.7.0/css/style.css
@@ -68,8 +68,40 @@ body {
   color: #4b4848; 
   cursor: pointer;
 }
+.cancel {
+  width: 100px;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #CCCCCC;
+    background-color: #CCCCCC;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    color: #4b4848;
+}
 .footer .cancel:hover{
-  background-color: #7a2a2a;
+  background-color: #7e7b7b8e;
+}
+
+.confirm {
+  width: 100px;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #CCCCCC;
+    background-color: #a03838;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    color: #ffffff;
+}
+.confirm:hover {
+  background-color: #7c2d2d;
 }
 
 
@@ -288,22 +320,25 @@ body {
 }
 
 .alert {
-  
   padding: 20px;
-  background-color: #f44336;
+  background-color: #50bb60;
+  width: 400px;
+  display:block;
+  position: fixed;
   color: white;
+  border-bottom-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
   opacity: 1;
-  transition: opacity 0.6s;
+  transition: opacity 0;
   margin-bottom: 15px;
   overflow: hidden;
-  -moz-animation-delay: 3.5s;
-  -webkit-animation-delay: 3.5s;
-  -o-animation-delay: 3.5s;
-   animation-delay: 3.5s;
-
+  animation: cssAnimation 2.5s forwards;
+}
+@keyframes cssAnimation {
+  0%   {opacity: 1;}
+  70%  {opacity: 1;}
+  100% {opacity: 0;}
 }
 
-.alert.success {background-color: #04AA6D;}
-.alert.info {background-color: #2196F3;}
-.alert.warning {background-color: #ff9800;}
-
+/* modal */
