--- a/assets/css/font-awesome-4.7.0/css/menu.css
+++ b/assets/css/font-awesome-4.7.0/css/menu.css
@@ -81,6 +81,7 @@ position:relative;
 display:block;
 width:250px;
 border: none;
+padding: 4px;
 }
 
 .main-menu li>a {
@@ -90,7 +91,7 @@ display:table;
 border-collapse:collapse;
 border-spacing:0;
 color:#070707;
-font-size: 13px;
+font-size: 14px;
 text-decoration:none;
 -webkit-transform:translateZ(0) scale(1,1);
 -webkit-transition:all .14s linear;
@@ -99,6 +100,7 @@ font-family: 'Strait', sans-serif;
 border-top:1px solid #f2f2f2;
 text-shadow: 1px 1px 1px  #fff;  
 border: none;
+font-weight: bolder;
 }
 
 
