--- a/assets/css/font-awesome-4.7.0/css/style.css
+++ b/assets/css/font-awesome-4.7.0/css/style.css
@@ -25,7 +25,6 @@ body {
   left: 0;
   width: 100%;
   height: 60px;
-  background-color: #fff;
   box-shadow: 1px 1px 5px rgba(0,0,0,.1);
   text-align: center;
   padding: 10px;
@@ -217,18 +216,17 @@ body {
   }
 
   .grid-container{
-  margin-top:50px;
-  display: grid;
-  gap: 5px;
-  grid-template-columns: auto auto auto auto;
+    display: grid;
+    grid-gap: 30px;
+    padding: 10px;
+    justify-items: center;
+    align-content: space-evenly;
+    justify-content: start;
   }
   
-  .grid-item {
-    /* background-color: rgba(255, 255, 255, 0.8); */
-    /* border: 1px solid rgba(0, 0, 0, 0.8); */
-    padding: 10px;
-  }
-
+.grid-container--fill {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
   .grid-item .form-label{
     display: block;
     font-weight: bold;
@@ -239,19 +237,7 @@ body {
     color: red;
   }
 
-  .grid-item input{
-    width: 300px;
-    height: 23px;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 0px;
-    border-radius: 5px;
-    font-size: 14px;
-    color: #000;
-    transition: 0.4s;
-    background-color: #f2f2f2;
-  }
-  .grid-item  select{
+  .grid-item select{
     width: 320px;
     height: 43px;
     padding: 10px;
@@ -263,6 +249,18 @@ body {
     transition: 0.4s;
     background-color: #f2f2f2;
   }
+  .grid-item .form-control{
+    width: 300px;
+    height: 23px;
+    margin-bottom: 10px;
+    border: 0px;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #000;
+    transition: 0.4s;
+    background-color: #f2f2f2;
+}
+
 
   .grid-container-dashboard{
     margin-top:50px;
@@ -299,19 +297,6 @@ body {
 }
 .box-content{
   color: #99a0b0;
-}
-
-  .grid-item .form-control{
-    width: 300px;
-    height: 23px;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 0px;
-    border-radius: 5px;
-    font-size: 14px;
-    color: #000;
-    transition: 0.4s;
-    background-color: #f2f2f2;
 }
 
   .form-control:hover{
@@ -385,10 +370,11 @@ body {
   border-radius: 5px;
 }
 
-.grid-container h3 {
+ h3 {
   font-weight: bold;
   font-size: 20px;
   color: #06aa16;
+  margin-bottom: 1px;
 }
 
 .alert_message {
