--- a/assets/css/font-awesome-4.7.0/css/style.css
+++ b/assets/css/font-awesome-4.7.0/css/style.css
@@ -249,6 +249,14 @@ body {
     transition: 0.4s;
     background-color: #f2f2f2;
   }
+  .grid-item select option{
+    font-size: 15px;
+    padding: 10px;
+    border-radius: 5px;
+    color: #000;
+    background-color: #f2f2f2;
+  }
+  
   .grid-item .form-control{
     width: 300px;
     height: 23px;
