--- a/assets/css/font-awesome-4.7.0/css/menu.css
+++ b/assets/css/font-awesome-4.7.0/css/menu.css
@@ -5,12 +5,13 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:300); */
 
 .logo{
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 150px;
+    max-height: 150px;
     border-radius: 50%;
     margin-top: 5px;
     margin-bottom: 10px;
     margin-left: 65px;
+    width: 120px;
 }
 
 
