--- a/assets/css/font-awesome-4.7.0/css/login.css
+++ b/assets/css/font-awesome-4.7.0/css/login.css
@@ -8,7 +8,7 @@
 }
 
 body {
-	background: linear-gradient(90deg, #fafafa, #83b48a);		
+	background: linear-gradient(90deg, #fafafa, #560202);		
 }
 
 .container {
@@ -26,7 +26,7 @@ body {
 	position: relative;	
 	height: 600px;
 	width: 360px;	
-	box-shadow: 0px 0px 24px #799e7d;
+	box-shadow: 0px 0px 24px #2c2c2c;
 	border-radius: 10px;
 	
 }
@@ -58,23 +58,33 @@ body {
 .login__header {
 	border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
-	background-color: #096131;
+	background-color: #2C2D2D;
     color: #fff;
     text-align: center;
     padding: 20px;
 }
 
 .login-logo{
-	max-width: 200px;
-    max-height: 200px;
+	max-width: 150px;
+    max-height: 150;
     border-radius: 50%;
 }
 
 .login__header h2{
 	font-family: Raleway, sans-serif;
-	color: #fafafa;
-	font-size: 30px;
-	/* text-shadow:  0 0 10px #284e2e;  */
+	color: #fafafa; 
+	font-size: 25px;
+	font-weight: bold;
+	text-align: center;
+	text-shadow:  0 0  	10px #828e84; 
+}
+.login__header .title{
+	font-family: Raleway, sans-serif;
+	color: #fafafa; 
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	text-shadow:  0 0  	10px #828e84; 
 }
 
 
@@ -86,7 +96,7 @@ body {
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #83b48a;
+	color: #932929;
 }
 
 .login__input {
@@ -104,7 +114,7 @@ body {
 .login__input:focus,
 .login__input:hover {
 	outline: none;
-	border-bottom-color: #83b48a;
+	border-bottom-color: #ed0e0e;
 }
 
 .login__submit {
@@ -119,7 +129,7 @@ body {
 	text-align: center;
 	width: 100%;
 	color: #000000;
-	box-shadow: 0px 2px 2px #83b48a;
+	box-shadow: 0px 2px 2px #7a1313;
 	cursor: pointer;
 	transition: .2s;
 
@@ -130,8 +140,7 @@ body {
 .login__submit:active,
 .login__submit:focus,
 .login__submit:hover {
-	border-color: #123f19;
-	background: #83b48a;
+	background: #7a1313;
 	color: #f8f7f7;
 	outline: none;
 }
