--- a/assets/css/font-awesome-4.7.0/css/menu.css
+++ b/assets/css/font-awesome-4.7.0/css/menu.css
@@ -60,7 +60,8 @@ font-size:20px;
 
 .main-menu, .sidebar {
 /* background-image: linear-gradient( #83b48a80 1%, white 80%); */
-background-image:  linear-gradient( #EAF9E7, white );
+/* background-image:  linear-gradient( #560202, white ); */
+background-color: #2C2D2D;
 padding-top: 20px;
 top:0;
 bottom:0;
@@ -92,14 +93,12 @@ width:255px;
 display:table;
 border-collapse:collapse;
 border-spacing:0;
-color:#011518;
 font-size: 14px;
 text-decoration:none;
+color:#fff;
 -webkit-transform:translateZ(0) scale(1,1);
 -webkit-transition:all .14s linear;
 transition:all .14s linear;
-border-top:1px solid #f2f2f2;
-text-shadow: 1px 1px 1px  #fff;  
 border: none;
 font-weight: bolder;
 }
@@ -165,8 +164,8 @@ text-transform:capitalize;
 
 
 .main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-color:#1b1b1b;
-background-color:#83b48a;
+color:#dedede;
+background-image:  linear-gradient(to right, #560202, transparent );
 text-shadow: 0px 0px 0px; 
 }
 .area {
