--- a/assets/css/font-awesome-4.7.0/css/login.css
+++ b/assets/css/font-awesome-4.7.0/css/login.css
@@ -144,3 +144,69 @@ body {
 	color: #f8f7f7;
 	outline: none;
 }
+
+.radio-button-container {
+	display: flex;
+	align-items: center;
+	gap: 24px;
+  }
+  
+  .radio-button {
+	display: inline-block;
+	position: relative;
+	cursor: pointer;
+  }
+  
+  .radio-button__input {
+	position: absolute;
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  .radio-button__label {
+	display: inline-block;
+	padding-left: 30px;
+	margin-bottom: 10px;
+	position: relative;
+	font-size: 10px;
+	color: #3a3939;
+	font-weight: 600;
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: all 0.3s ease;
+  }
+  
+  .radio-button__custom {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	border: 2px solid #555;
+	transition: all 0.3s ease;
+  }
+  
+  .radio-button__input:checked + .radio-button__label .radio-button__custom {
+	background-color: #932929;
+	border-color: transparent;
+	transform: scale(0.8);
+	box-shadow: 0 0 20px #4c8bf580;
+  }
+  
+  .radio-button__input:checked + .radio-button__label {
+	color: #932929;
+  }
+  
+  .radio-button__label:hover .radio-button__custom {
+	transform: scale(1.2);
+	border-color: #4c8bf5;
+	box-shadow: 0 0 20px #932929;
+  }
+  
+  
+  
+  
+  
+  
