--- a/assets/css/font-awesome-4.7.0/css/menu.css
+++ b/assets/css/font-awesome-4.7.0/css/menu.css
@@ -174,3 +174,12 @@ background: #e2e2e2;
 width: 100%;
 height: 100%;
 }
+
+.user {
+    text-align: center;
+    font-size: 20px;
+    text-decoration:none;
+    color:#fff;
+    border: none;
+    margin-bottom: 10px;
+    }
